Added Organisations data type with corresponding service and necessary changes. Updated Log and StatisticsEntry. Updated documentation. Java 17 lift.
